Fix the lightbox in dark mode and get more image data from Unsplash for each image

--- a/_assets/styles/dark-mode.less
+++ b/_assets/styles/dark-mode.less
@@ -48,6 +48,20 @@ body.dark-mode {
       border-top: 1px solid #111;
     }
   }
+
+  .lightbox-close,
+  .lightbox-caption {
+    color: #222;
+  }
+
+  .lightbox a {
+    color: #222;
+  }
+
+  .lightbox a:hover,
+  .lightbox a:active {
+    color: #1a1a1a;
+  }
 }
 
 .toggle-dark-mode {
