--- a/_assets/styles/lightbox.less
+++ b/_assets/styles/lightbox.less
@@ -11,7 +11,7 @@
   width: 100%; /* fallback */
 	height: 100%; /* fallback */
   text-align: center;
-	background: rgba(255,255,255,0.85);
+	background: rgba(255,255,255,0.95);
   z-index: 999;
 }
 
